--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^7.0.0",
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.7",
+        "jquery": "^3.7.1",
+        "simple-datatables": "^10.0.0"
     }
 }
